--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   border-block-end: 4px solid;
   border-image-source: radial-gradient(
     circle at bottom right,
-    purple,
+    rgb(14 165 233),
     transparent 35%
   );
 
