--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,5 @@ header {
   z-index: 10001 !important;
 }
 .active {
-  color: rgb(0, 32, 216);
-  font-weight: 600;
+  @apply text-blue-600 font-bold underline underline-offset-4;
 }
